document type declaration is added, header location is changed and fixed layout problem in section3.

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ header > div {
   align-items: center;
 }
 
-#Part1 h1{
+#part1 h1{
   font-size: 80px;
   text-align: center;
   margin:0 0 50px 0; 
@@ -131,8 +131,7 @@ header > div {
   text-align: center;
   width: 500;
   display: flex;
-	justify-content:  space-around;
-
+  justify-content:space-around;
 }
 
 #section1link .buttonRed{
@@ -145,6 +144,7 @@ header > div {
   display:flex;
   justify-content:center;
   align-items:center;
+  margin-right: 20px;
 }
 
 #section1link .buttonpure{
@@ -156,6 +156,7 @@ header > div {
   display:flex;
   justify-content:center;
   align-items:center;
+  margin-left: 20px;
 }
 
 #part2{  
@@ -189,30 +190,31 @@ header > div {
   width: 850px;
 }
 
+
 #part3{
   display:flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-  padding: 10px 70px 5px 70px;
+	justify-content: space-evenly;
 
 }
 
-#part3allbox{
-  display: flex;
-  flex-direction: row;
-  justify-content:space-around;
+.part3box{
+  display: table;
+  justify-content: space-evenly;
+  flex-direction: column;
   align-items: center;
-  width: 1100px;  
-}
+  width: 300px;
+  
+} 
 
-#part3 svg{
+
+.part3Img{
   width:40px;
   height:40px;
 }
 
 #part3 h4{
   color:#ED1C24;
+
 }
 
 #part3 p{
@@ -225,7 +227,8 @@ header > div {
   background-color: black;
   font-size:1.5em;
   text-align:center;
-  margin:60px;
+  margin: 60px auto 0;
   padding: 10px 140px 10px 140px;
+  display: block;
  
 }
